Remove notion of ServerConnectionCode from fake server

HttpResponse::ServerConnectionCode (poorly named, because it includes
network status too) should not be exposed to the fake server (or any
server).

Instead, let the "client" construct that information based on the
network error and http response code. Specifically, the logic is moved
to LoopbackConnectionManager, which becomes more analogous to the
"production" ServerConnectionManager.

This removes some weirdness like FakeServer::SendToLoopbackServer()
dropping |server_status| altogether.

Bug: 774180
Change-Id: I52e51925a63a08e592c40d840a9319ff2244616a
Reviewed-on: https://chromium-review.googlesource.com/c/1347286
Reviewed-by: Mohamed Amir Yosef <mamir@chromium.org>
Commit-Queue: Mikel Astiz <mastiz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610402}
Former-commit-id: a4018c6b4fbe88b865c99347135ed25aa89592c5