components/sync/engine_impl/loopback_server/loopback_connection_manager.cc
@@ -3,6 +3,9 @@
 // found in the LICENSE file.
 #include "components/sync/engine_impl/loopback_server/loopback_connection_manager.h"
 
+#include "components/sync/engine_impl/net/server_connection_manager.h"
+#include "net/http/http_status_code.h"
+
 namespace syncer {
 
 LoopbackConnectionManager::LoopbackConnectionManager(
@@ -18,9 +21,15 @@ bool LoopbackConnectionManager::PostBufferToPath(
     const std::string& path,
     const std::string& auth_token) {
   loopback_server_.HandleCommand(
-      params->buffer_in, &params->response.server_status,
-      &params->response.response_code, &params->buffer_out);
-  return params->response.server_status == HttpResponse::SERVER_CONNECTION_OK;
+      params->buffer_in, &params->response.response_code, &params->buffer_out);
+
+  if (params->response.response_code != net::HTTP_OK) {
+    params->response.server_status = HttpResponse::SYNC_SERVER_ERROR;
+    return false;
+  }
+
+  params->response.server_status = HttpResponse::SERVER_CONNECTION_OK;
+  return true;
 }
 
 }  // namespace syncer
